issue(#12): shift consecutive chars from right to left, not otherway.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,7 +47,7 @@ h1 {
 }
 
 .asl-spell.consecutive .finger-sign {
-  margin-left: 2ex;
+  margin-right: 2ex;
   margin-top: 1ex;
   transition-duration: .25s;
 }
